[21.December 2008]
- entities/switch.rb: RD->RDoc
- Christmas2008/Climbin: beginning of a script; metadata added to the map

[19.December 2008]
- bottompanel.rb, bpvikingview.rb, viking.rb, inventory.rb:
  Fixed problem "VikingView doesn't update on life loss":
  VikingView is observer of both Viking and Inventory
- viking.rb: keep UP key pressed, viking will wait till he collides 
  with a ladder and start climbing it (current system "press UP to try 
  to climb" was uncomfortable for the player - at least for me :) )
- shielder.rb: shield disappears when Olaf is climbing or KO;
  fixed error "Olaf clims slowly with shield over his head"
- shield.rb: Shield's position is determined according to Olaf's
  paint_rect, not collision_rect (looks better)
- location.rb: fixed error: objects were painted according to their rect,
  not collision_rect
- entities/boat.rb: boat is painted in front of the vikings (looks better)
- game.rb, fvdef.rb, initfv.rb: in a level level name and password are
  shown in window caption

[18.December 2008]
- DefaultCampaign, RubyCampaign, TestsCampaign/MonsterTestsLevelSet: 
  fixed requirement statements of moved entities

[15.December 2008]
- gfx/runes_[large, small].png: runes for rune stones and rune gems
- entities from top directory moved to 'entities' (with exception of vikings,
  sword and shield);
  also entities from directory 'monsters' moved there
- gfx/runestone.png: awful, but I can't make it better for now
- game.rb, some entities: fixed require statements (requiring from 'monsters')
- fvdef.rb, freevikings.rb: 'entities/' added to $:, 'monsters/' removed
- entities/runestone.rb: three classes of different runic stones
- entities/door.rb: @rect.w changes according to state of the object
- gfx/themes/UndergroundCave (new theme, now has just a bridge)
- entities/bridge.rb: added comment about initialisation
- entities/fallingstone.rb: New funny game object which likes to kill vikings